﻿shmuel 22.11.2018 21:36:01 +0200 - build 674

1. LuaFAR: добавлены функции win.GetConsoleCP, win.SetConsoleCP, win.GetConsoleOutputCP,
   win.SetConsoleOutputCP.

zg 15.11.2018 11:39:11 +0200 - build 673

1. 0003669: Немодальный диалог: в обработчик передаётся закрытый хэндл.

shmuel 24.10.2018 15:22:08 +0200 - build 672

1. LuaFAR: suppress compilation warning.

shmuel 23.10.2018 10:16:54 +0200 - build 671

1. LuaFAR: добавлена поддержка пропущенного файлового атрибута (no scrub data).

shmuel 22.10.2018 11:41:37 +0200 - build 670

1. LuaFAR: добавлена поддержка 3-х пропущенных файловых атрибутов (encrypted, not indexed, virtual).

shmuel 12.10.2018 02:39:44 +0200 - build 669

1. LuaFAR: добавлены функции: regex.exec, regex.execW;
           добавлены методы скомпилированного регекса: exec, execW;

shmuel 26.09.2018 19:09:59 +0200 - build 668

1. Fix build 667.

shmuel 26.09.2018 18:23:42 +0200 - build 667

1. LuaFAR: функция win.SetRegKey() возвращает булевое значение.

shmuel 13.09.2018 22:12:27 +0200 - build 666

1. M#3034: LuaFAR: SendDlgMessage работает не со всеми событиями/сообщениями
   --> Сделано пока частично: добавлена обработка 7-ми сообщений DN_*

shmuel 12.09.2018 20:16:50 +0200 - build 665

1. M#3654: в LuaMacro добавить поле "selected"

shmuel 08.09.2018 18:01:32 +0200 - build 664

1. LuaFAR: M#3652: метод raw для хэндлов панелей

shmuel 29.08.2018 23:47:28 +0200 - build 663

1. Suppress a warning in build 662.

shmuel 29.08.2018 19:47:30 +0200 - build 662

1. LuaFAR: M#3644: far.Menu: приоритет SelectIndex перед selected

zg 28.08.2018 19:38:59 +0300 - build 661

1. при обработке событий редактора/просмотра в паре мест использовался текущий редактор/просмотр.

shmuel 25.08.2018 15:50:47 +0200 - build 660

1. M#3643: Макросы для Grabber не работают если фар запущен в режиме редактора/вьюера

shmuel 25.08.2018 11:35:47 +0200 - build 659

1. Из форума: В фаре запущенном как редактор/вьюер (ключи /v /e) не загружаются макросы на Desktop
